results/SVCOMP/2-shot/log-arraylength1-2024_03_18_22_47_59.txt
class arraylength1 {
    //@ requires size >= 0;
    //@ ensures \result == -1 ==> size < 0;
    //@ ensures \result == 0 ==> size >= 0 && \result == 0 && \result == 1;
    public static int func(int size) {
        if (size < 0) return -1;
        int int_array[] = new int[size];

        //@ assert int_array != null;
        //@ assert int_array.length == size;
        //@ assert int_array.length == size ==> \result == 1;
        //@ assert int_array.length != size ==> \result == 0;
        if(int_array.length != size)
            return 0;
        return 1;
    }
}
/home/max/Documents/JMLGPT/tmp/arraylength1.java:11: error: A \result expression may not be in a assert clause
        //@ assert int_array.length == size ==> \result == 1;
                                                 ^
/home/max/Documents/JMLGPT/tmp/arraylength1.java:12: error: A \result expression may not be in a assert clause
        //@ assert int_array.length != size ==> \result == 0;
                                                 ^
2 errors

